# hm2p

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  Makefile  NOTEPAD.md  PLAN.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml  lint.yml
config/: compute.yaml  patching.yaml  pipeline.yaml
docker/: cpu.Dockerfile  gpu.Dockerfile  kpms.Dockerfile
docs/: analysis-plan.md  aws-setup.md  contributing.md  data-guide.md  frontend-design.md  hypotheses.md  manual-installs.md  old-vs-new-comparison.md  patching-port-plan.md  reference-papers.md  requirements-status.md  research-landscape.md  s3-lifecycle-rawdata.json  stats-strategy.md  testing-strategy.md
frontend/: app.py  data.py
frontend/pages/: ahv_page.py  analysis_page.py  anatomy_page.py  anchoring_page.py  animals_page.py  aws_page.py  batch_page.py  behaviour_page.py  calcium_page.py  changelog_page.py  classify_page.py  compare_page.py  correlations_page.py  cost_page.py  decoder_page.py  dlc_page.py  drift_page.py  event_dynamics_page.py  events_page.py  explorer_page.py  gain_page.py  gallery_page.py  hd_tuning_page.py  home_page.py  hypotheses_page.py  info_theory_page.py  light_compare_page.py  light_page.py  maze_page.py  moseq_explore_page.py  moseq_page.py  patching_morph_page.py  patching_page.py  patching_traces_page.py  pipeline.py  pipeline_page.py  place_tuning_page.py  pop_dynamics_page.py  population_page.py  qc_report_page.py  (+14 more)
metadata/: experiments.csv
metadata/patching/: animals.csv  cells.csv
old-penk-patching/: .gitignore  README.md  checkCorrelations.m  example_config.ini  loadPCDirs.m  procPC.m  sumAllMorphs.m  sumCorrelations.m  sumEphysPlots.m  sumPCBasic.m  sumPCPCA.m  sumSpikeWaveforms.m
old-penk-patching/ephys/: ephys_intr.m  getNoSpikeIndexes.m  getSS.m  pc_lowpassfilt.m  plot_intrinsic.m  sp_parameters_pandora.m  spike_times.m
old-penk-patching/plots/: drawScaleBar.m  plotMorphsCombined.m  plotMorphsCombined.m.orig  plotPCACellType.m  plotPCCorr.m  plotSS.m  plotSSCellType.m
old-penk-patching/utils/: getMatrixFromTable.m  getPlainText.m  getSurfDist.m  getTracingFiles.m  imgScaleClip.m  plotPCPCA.m  sumPCCorrs.m  sumTableNum.m
old-pipeline/: .gitignore  README.md  README_NEW.md  mov_dlc.py  requirements-exact.txt  run.py  run_s2p.py  test.py
old-pipeline/analysis/: analysis.py  analysis_acc.py  analysis_cam.py  analysis_vis_evoke.py
old-pipeline/brainreg/: commands.txt
old-pipeline/brainrender/: render_injs.py
old-pipeline/classes/: Experiment.py  FasterFFMpegWriter.py  ProcPath.py  S2PData.py  TrackingCamera.py
old-pipeline/figs-benoit/: invivo.py
old-pipeline/metadata/: animals.csv  experiments.csv  somadend.csv
old-pipeline/notebooks/: PLAN.MD  bouts.ipynb  ca.ipynb  connected-check-r-0.2.csv  connected-check-r-0.3.csv  connected.csv  connected.ipynb  correlations.ipynb  csv.ipynb  decisions.ipynb  decisions_ver1.ipynb  decoding.ipynb  dlc_checks.ipynb  info.ipynb  modelling.ipynb  temporal.ipynb  traces-dend.ipynb
old-pipeline/old/: AccelData.py  run_analysis_acc.py  run_analysis_behave.py  run_analysis_behave_tuning.py  run_analysis_light.py  run_analysis_maze_light.py  run_analysis_soma_dend.py  run_reg_img.py  run_s2p.py  run_s2p_reg.py
old-pipeline/paths/: config.py
old-pipeline/proc/: proc_behave.py  proc_brainreg.py  proc_ca.py  proc_ca_behave.py  proc_s2p.py  proc_somadend.py
old-pipeline/s2p/: train_dend.txt  train_soma.txt
old-pipeline/scripts/: bad_periods.py  check_experiments.py  copy_mov_dlc.py  copy_raw_local.py  example-rsync.txt  mov_backup_meta.py  mov_edit.py  mov_multi.py  raw2tif.py  raw2tifmulti.py  s2p_class.py  sum_experiments.py
old-pipeline/sum/: sum_behave.py  sum_ca_behave.py  sum_events.py  sum_somadend.py  sum_tune.py
old-pipeline/tools/: pose_viewer.py
old-pipeline/utils/: behave.py  ca.py  data.py  db.py  img.py  metadata.py  misc.py  plot.py  s2p.py  stats.py  tune.py  tune_old.py  video.py
results/hypotheses/: hypothesis_report.md  hypothesis_results.csv
scripts/: RELAUNCH_DLC.md  aws_batch_setup.sh  deploy_frontend_test.py  download_from_s3.py  ecr_push.sh  launch_dlc_ec2.py  launch_dlc_parallel.py  launch_kpms_ec2.py  launch_suite2p_ec2.py  run_downstream_pipeline.py  run_kpms.py  run_patching.py  run_stage0_daq.py  run_stage3_kinematics.py  run_stage4_calcium.py  run_stage5_sync.py  run_stage6_analysis.py  run_zdrift.py  setup_auto_shutdown.py  setup_ec2_iam.py  setup_frontend_iam.py  setup_s3_logging.py  setup_sg_lockdown.py  setup_ssm.py  test_hypotheses.py  test_one_session.sh  upload_patching_s3.py  upload_to_s3.py  verify_s3_upload.sh  viz_suite2p.py
src/hm2p/: __init__.py  cli.py  config.py  constants.py  plotting.py  session.py
tests/: conftest.py  test_cli.py  test_config.py  test_plotting.py  test_session.py
tests/analysis/: test_activity.py  test_ahv.py  test_anchoring.py  test_cache.py  test_classify.py  test_comparison.py  test_decoder.py  test_gain.py  test_hypothesis_analysis.py  test_information.py  test_population.py  test_run.py  test_save.py  test_significance.py  test_speed.py  test_stability.py  test_tuning.py
tests/anatomy/: test_injection.py  test_register.py
tests/calcium/: test_dff.py  test_event_dynamics.py  test_events.py  test_neuropil.py  test_run.py  test_spikes.py
tests/extraction/: test_caiman.py  test_run_suite2p.py  test_suite2p.py  test_zdrift.py
tests/frontend/: test_ahv_page.py  test_anchoring_page.py  test_app_rendering.py  test_classify_page.py  test_cost_aws_pages.py  test_data.py  test_decoder_page.py  test_drift_page.py  test_hd_tuning_page.py  test_light_analysis.py  test_maze_page.py  test_patching_traces_page.py  test_pop_dynamics_page.py  test_signal_quality_page.py  test_summary_page.py  test_tracking_quality_page.py
tests/ingest/: test_daq.py  test_daq_parse.py  test_validate.py
tests/io/: test_aws_cost.py  test_hdf5.py  test_nwb.py  test_s3.py
tests/kinematics/: test_compute.py  test_compute_dataset.py  (+1 more)
workflow/: Snakefile
(+112 files in other folders)
